--- a/config.json
+++ b/config.json
@@ -4,7 +4,8 @@
     },
     "database": {
         "address": "localhost",
-        "port": 27017
+        "port": 27017,
+        "name": "admin"
     },
     "discord": {
         "client_id": "",
