config.json -> adds username and password keys to `database` grouping

--- a/config.json
+++ b/config.json
@@ -5,7 +5,9 @@
     "database": {
         "address": "localhost",
         "port": 27017,
-        "name": "admin"
+        "name": "admin",
+        "username": "",
+        "password": ""
     },
     "discord": {
         "client_id": "",
