config.json -> removes discord auth values

--- a/config.json
+++ b/config.json
@@ -10,9 +10,9 @@
         "password": ""
     },
     "discord": {
-        "client_id": "996541781162332160",
-        "client_secret": "UwNC_kPIlCtuabwnl8ArhOrpwJeUvcCw",
+        "client_id": "",
+        "client_secret": "",
         "command_prefix": "/",
-        "bot_token": "OTk2NTQxNzgxMTYyMzMyMTYw.G9Du0s.13JPoyzLnIVoxEWMANO_L0lIwQj5wHnkybM_Us"
+        "bot_token": ""
     }
 }
